--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,7 @@
 @import '../blocks-css/header.css';
 @import '../blocks-css/box.css';
 @import '../blocks-css/box2.css';
+@import '../blocks-css/footer.css';
 ul,
 ol,
 h1,
