--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,7 @@
 @import '../blocks-css/box.css';
 @import '../blocks-css/box2.css';
 @import '../blocks-css/footer.css';
+@import '../blocks-css/about.css';
 ul,
 ol,
 h1,
