--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,7 @@
 @import '../blocks-css/box2.css';
 @import '../blocks-css/footer.css';
 @import '../blocks-css/about.css';
+@import '../blocks-css/product.css';
 ul,
 ol,
 h1,
